syntax = "proto3";

package infrastructure.api.rpc.payment.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/billing/infrastructure/payment_rpc";

import "google/protobuf/empty.proto";
import "domain/billing/payment/v1/payment.proto";

// PaymentService is the service that provides payment methods.
service PaymentService {
  // Payment returns a payment by id.
  rpc Payment(PaymentRequest) returns(PaymentResponse) {}
  // Payments returns a list of payments.
  rpc Payments(google.protobuf.Empty) returns(PaymentsResponse) {}
  // PaymentCreate creates a payment.
  rpc PaymentCreate(PaymentCreateRequest) returns(PaymentCreateResponse) {}
  // PaymentClose closes a payment.
  rpc PaymentClose(PaymentCloseRequest) returns(PaymentCloseResponse) {}
}

// PaymentRequest is the request message for PaymentService.Payment.
message PaymentRequest {
  // ID is the id of the payment.
  domain.billing.payment.v1.Payment payment = 1;
}

// PaymentResponse is the response message for PaymentService.Payment.
message PaymentResponse {
  // Payment is the payment.
  domain.billing.payment.v1.Payment payment = 1;
}

// PaymentsResponse is the response message for PaymentService.Payments.
message PaymentsResponse {
  // Payments is the list of payments.
  repeated domain.billing.payment.v1.Payment list = 1;
}

// PaymentCreateRequest is the request message for PaymentService.PaymentCreate.
message PaymentCreateRequest {
  // Payment is the payment.
  domain.billing.payment.v1.Payment payment = 1;
}

// PaymentCreateResponse is the response message for PaymentService.PaymentCreate.
message PaymentCreateResponse {
  // Payment is the payment.
  domain.billing.payment.v1.Payment payment = 1;
}

// PaymentCloseRequest is the request message for PaymentService.PaymentClose.
message PaymentCloseRequest {
  // Payment is the payment.
  domain.billing.payment.v1.Payment payment = 1;
}

// PaymentCloseResponse is the response message for PaymentService.PaymentClose.
message PaymentCloseResponse {
  // Payment is the payment.
  domain.billing.payment.v1.Payment payment = 1;
}
