syntax = "proto3";

package domain.eventsourcing.v1;

option go_package = "github.com/shortlink-org/shortlink/internal/pkg/eventsourcing/domain/eventsourcing/v1";

import "google/protobuf/field_mask.proto";
import "domain/eventsourcing/v1/event.proto";

// BaseAggregate represents the basic information that all aggregates should have.
message BaseAggregate {
  // Field mask indicating which fields have been updated.
  google.protobuf.FieldMask field_mask = 5;

  // The unique identifier of the aggregate.
  string id = 1;

  // The type of the aggregate.
  string type = 2;

  // The version of the aggregate.
  int32 version = 3;

  // The changes that have been made to the aggregate, represented as a list of events.
  repeated eventsourcing.v1.Event changes = 4;
}
